[package]
name = "Rungeon"
version = "0.1.0"
authors = ["Ronatos <alexander.l.perez@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
num-bigint = "0.3.1"
num-traits = "0.2.14"
rand = "0.8.3"